--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/PlanetGaming/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/explore.html">Explore</a>
+                    <a class="nav-link" href="/PlanetGaming/explore.html">Explore</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/ourgames.html">Our Games</a>
+                    <a class="nav-link" href="/PlanetGaming/ourgames.html">Our Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Community</a>
