--- a/ourgames.html
+++ b/ourgames.html
@@ -132,10 +132,11 @@
               </button>
             </div>
             <div class="modal-body modal-popout-bg font-playfair new-modal1 font-weight-bolder">
-             <h3>A classic game that has been entertaining people for ages.Your challenge is to clear the board by removing
-              all but one of the marbles. A marble is removed when it is jumped over by the marble next to it in a
-              straight line (no diagonals). A marble can only jump one space at a time, and the spot that it lands in
-              needs to be empty.Wanna try? </h3>
+             <h3>A classic game that has been entertaining people for ages. 
+               Your challenge is to clear the board by removing all but one marble.
+               A marble is removed when it is jumped over by the marble next to it in a straight line (no diagonals).
+               Marble can only jump one space at a time, and the spot it lands in needs to be empty. Wanna try?
+              </h3>
             </div>
             <div class="modal-footer ">
               <button type="button" class="btn btn-secondary font-russo" data-dismiss="modal">Close</button>
@@ -174,10 +175,9 @@
               </button>
             </div>
             <div class="modal-body modal-popout-bg font-playfair new-modal2 font-weight-bolder">
-             <h3> Enigma is a unique puzzle game influenced by multiple genres.Your objective is to find and uncover all
-              pairs of
-              identical Oxyd stones in each landscape. Sounds Easy?Try it for yourself with hidden traps and innumerable
-              puzzles blocking your direct way to the Oxyd stones.
+             <h3> Enigma is a unique puzzle game influenced by multiple genres.
+               You aim to find and uncover all pairs of identical Oxyd stones in each landscape.
+               Sounds Easy? Try it for yourself with hidden traps and innumerable puzzles blocking your direct way to the Oxyd stones.
               </h3>
             </div>
             <div class="modal-footer ">
@@ -193,7 +193,8 @@
           <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/tron bike.png" alt="">
           <div class="card-body ">
             <h4 class="card-title font-russo">Tron</h4>
-            <p class="card-text font-playfair">Light Cycles are vehicles resembling motorcycles that are driven by programs in the Game Grid. Upon being rezzed in by a program's rod, a light cycle....</p>
+            <p class="card-text font-playfair">Light Cycles are vehicles resembling motorcycles that are driven by programs in the Game Grid.
+              Upon being rezzed in by a program's rod, a light cycle....</p>
             <div class="d-flex justify-content-center align-items-center">
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-primary font-russo" style="background-color: #25368D;" data-toggle="modal" data-target="#tron">
@@ -216,7 +217,9 @@
         </button>
       </div>
       <div class="modal-body modal-popout-bg font-playfair new-modal3 font-weight-bolder">
-       <h3> Light Cycles are vehicles resembling motorcycles that are driven by programs in the Game Grid. Upon being rezzed in by a program's rod, a light cycle completely covers the driver - who is forced into a riding position - with a protective canopy. Each Light Cycle is colored according to the color of the rod that generated it.
+       <h3>Light Cycles are vehicles resembling motorcycles that are driven by programs in the Game Grid.
+         Upon being razzed in by a program's rod, a light cycle completely covers the driver - who is forced into a riding position - with a protective canopy.
+         Each Light Cycle is colored according to the color of the rod that generated it.
        </h3>
       </div>
       <div class="modal-footer ">
